# GimmeGist

./: .gitignore  README.md  analysis_options.yaml  analyze.txt  analyze_output.txt  dump_health_types.dart  pubspec.yaml
.github/workflows/: android_build.yml
ai_models/clinical_translation/: .settings.env  README.md  constants.py  pyproject.toml  run_pipeline.py
ai_models/clinical_translation/steps/evaluate/: dataset.py  evaluate.py
ai_models/clinical_translation/steps/features/: transform.py
ai_models/clinical_translation/steps/ingest/: ingest.py
ai_models/clinical_translation/steps/model/: graph_nodes.py  model.py  prompts.py
ai_models/clinical_translation/steps/split/: split.py
ai_models/question_generation/: .settings.env  README.md  constants.py  pyproject.toml  run_pipeline.py
ai_models/question_generation/steps/evaluate/: dataset.py  evaluate.py
ai_models/question_generation/steps/features/: transform.py
ai_models/question_generation/steps/ingest/: ingest.py
ai_models/question_generation/steps/model/: graph_nodes.py  model.py  prompts.py
ai_models/question_generation/steps/split/: split.py
ai_models/secondary_oversight/: .settings.env  README.md  constants.py  pyproject.toml  run_pipeline.py
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: app_router.dart  theme.dart
lib/models/: appointment.dart  appointment.g.dart
linux/: CMakeLists.txt
tasks/: lessons.md  todo.md
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: main.cpp  (+1 more)
(+34 files in other folders)
